style.css
* {
    padding: 0px;
    margin: 0px;
}

body {
    height: 100vh;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
}

.mainApp {
    /* height: 60%;
    width: 50%; */
    height: 30rem;
    width: 25rem;
    border: 1px solid black;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
}

.inputFieldDiv {
    width: 100%;
    height: 3rem;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 0rem 0.3rem;
}

.inputField {
    width: 80%;
}

.addButton {
    width: 10%;
}

.buttons {
    display: flex;
    justify-content: space-around;
    width: 100%;
    height: 2rem;
    /* padding: 1rem 0rem; */
}

.taskListDiv {
    width: 100%;
    padding-top: 0.5rem;
    overflow-y: scroll;
    height: 25rem;
}

ul {
    list-style-type: none;
}

li {
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding: 0.3rem 0.3rem;
}

.liButtonDiv {
    display: flex;
    justify-content: space-around;
    width: 30%;
}

.blue {
    background-color: #89CFF0;
}

.gold {
    background-color: #FFD700;
}

.showDoneButton {
    height: 100%;
    width: 50%;
}

.darkModeButton {
    height: 100%;
    width: 50%;
}

.hide {
    display: none;
}

